--- a/projects/Makefile.STEAM
+++ b/projects/Makefile.STEAM
@@ -1,16 +1,20 @@
 -include $(PWD)/rules_base
 
-%.steam-exe: $(OFILES)
-	$(CXX) -o $(LDFLAGS) $@ $(OFILES) $(LIBS)
+DEFINES := \
+	-DPLATFORM_$(PLATFORM) \
+	-DCPP_MEMORY \
+	-D_NO_JACK_ \
+	-D__LINUX_ALSA__ \
+	-D__LINUX_ALSASEQ__   
 
 SYSROOT     := $(shell gcc --print-sysroot)
 SDL_CFLAGS  := $(shell $(SYSROOT)/usr/bin/sdl-config --cflags)
 SDL_LIBS    := $(shell $(SYSROOT)/usr/bin/sdl-config --libs)
 
-CFLAGS	:= -O3 -D_NO_JACK_ -DCPP_MEMORY -Wall -I/usr/local/include -I$(PWD)/../sources -D__LINUX_ALSA__ -D__LINUX_ALSASEQ__ $(SDL_CFLAGS) $(SDL_LIBS)
- 
+CFLAGS	:= -O3 $(DEFINES) -Wall -I/usr/local/include -I$(PWD)/../sources $(SDL_CFLAGS)
 CXXFLAGS:= $(CFLAGS)
-
+LIBS	:=  -O3 -L/local/lib -Wl,-rpath,/usr/local/lib $(SDL_LIBS) -lasound -lSDL -lSDL_mixer -lpthread
 EXTENSION:= steam-exe
 
-LIBS	:=  -O3 -L/local/lib -Wl,-rpath,/usr/local/lib -lasound -lSDL -lSDL_mixer -lpthread
+%.steam-exe: $(OFILES)
+	$(CXX) -o $(LDFLAGS) $@ $(OFILES) $(LIBS)
