--- a/projects/Makefile.GP32
+++ b/projects/Makefile.GP32
@@ -1,3 +1,7 @@
+include $(PWD)/rules_gp32
+
+DEFINES := \
+	-DPLATFORM_$(PLATFORM) \
 
 DEVKITARM=/c/devkitGP32/devkitarm
 
@@ -6,17 +10,13 @@ DEVKITPRO=$(DEVKITARM)/..
 TOOLPATH=$(DEVKITARM)/bin
 PREFIX		:=	arm-linux-
 
-include $(PWD)/rules_gp32
 
 CFLAGS	:=	-Wall -O2 -mtune=arm9tdmi\
  			-fomit-frame-pointer\
 			-ffast-math $(INCLUDE)\
-			-DPLATFORM_$(PLATFORM) -I$(PWD)/../sources
+			$(DEFINES) -I$(PWD)/../sources
 
 CXXFLAGS:=	-fexceptions $(CFLAGS)
-
-EXTENSION:= fxe
-
 LIBS	:=	-lmirkoSDK -laddon -lm
-
 LIBDIRS	:=	$(LIBMIRKO)
+EXTENSION:= fxe
