--- a/projects/Makefile.OSX
+++ b/projects/Makefile.OSX
@@ -1,14 +1,14 @@
 -include $(PWD)/rules_base
 
+DEFINES := \
+	-DPLATFORM_$(PLATFORM)
+
+
+CFLAGS	:= -O3 -Wall $(DEFINES) -I$(PWD) -I/Library/Frameworks/SDL.framework/Headers 
+CXXFLAGS:= $(CFLAGS)
+LIBS	:=  
+EXTENSION:= app
+
 %.app: $(OFILES)
 	$(CXX) $(LDFLAGS) -arch i386 -framework SDL -framework Cocoa -framework Carbon -o $@ $(OFILES) $(LIBS)
 	mv $@ ../lgpt
-
-CFLAGS	:= -O3 -Wall -I$(PWD) -I/Library/Frameworks/SDL.framework/Headers 
-
-CXXFLAGS:= $(CFLAGS)
-
-EXTENSION:= app
-
-LIBS	:=  
-
