x86: Add midi to build now crash is fixed

--- a/projects/Makefile.X86
+++ b/projects/Makefile.X86
@@ -7,7 +7,7 @@ DEFINES := \
 	-D__LINUX_ALSASEQ__ \
 	-DSDL2 \
         -DSDLAUDIO \
-        -DDUMMYMIDI
+        -DRTMIDI
 
 ALSA_CFLAGS := $(shell i686-linux-gnu-pkg-config alsa --cflags)
 ALSA_LIBS := $(shell i686-linux-gnu-pkg-config alsa --libs)
