Adds check and build for MacOS (#117)
* Adds check and build for MacOS

Co-authored-by: djdiskmachine <djdiskmachine@proton.me>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -77,3 +77,29 @@ jobs:
         working-directory: projects
         run: |
           make PLATFORM=X64
+
+  macos:
+    runs-on: macos-13
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install required libraries
+        run: |
+          wget https://www.libsdl.org/release/SDL2-2.0.14.dmg
+          hdiutil attach SDL2-2.0.14.dmg
+          sudo cp -R /Volumes/SDL2/SDL2.framework /Library/Frameworks/
+
+      - name: Build Xcode project
+        run: |
+          xcodebuild ONLY_ACTIVE_ARCH=NO -project projects/lgpt64.xcodeproj -scheme LittleGPTracker -configuration Release build
+          cp -R bin/LittleGPTracker.app projects/
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
