--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,6 +3,56 @@ name: Check build viability
 on: [pull_request]
 
 jobs:
+
+  clang-format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Fetch all branches
+        run: git fetch
+
+      - name: Check formatting
+        run: |
+            git fetch origin master:master
+            CHANGED_FILES=$(git diff --name-only master --diff-filter=ACM | grep -iE '\.(cpp|h|c|hpp)$')
+
+            if [ -z "$CHANGED_FILES" ]; then
+                echo "No C/C++ files changed."
+                exit 0
+            fi
+
+            NEEDS_FORMATTING=0
+
+            # Run clang-format on the changed lines of each staged file
+            for FILE in $CHANGED_FILES; do
+                # Get the changed lines in the file
+                CHANGED_LINES=$(git diff -U0 master -- $FILE | grep -E '^@@' | awk '{print $3}' | cut -d',' -f1)
+
+                # Format each changed line in the file
+                for LINE in $CHANGED_LINES; do
+                    LINE_START=$(echo $LINE | cut -d'+' -f2)
+                    if [ -z "$LINE_START" ]; then
+                    continue
+                    fi
+                    clang-format -i --lines=$LINE_START:$LINE_START $FILE
+                done
+
+                if ! git diff --quiet $FILE; then
+                    NEEDS_FORMATTING=1
+                fi
+            done
+            if [ $NEEDS_FORMATTING -eq 1 ]; then
+                git diff
+                echo "Some files need formatting. Please review the diff."
+                echo "Tip: install pre-commit:"
+                echo "cp pre-commit ./git/hooks"
+                exit 1
+            else
+                echo "All files are properly formatted."
+            fi
+    
   win32:
     runs-on: windows-latest
     steps:
