--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -46,8 +46,8 @@ jobs:
             if [ $NEEDS_FORMATTING -eq 1 ]; then
                 git diff
                 echo "Some files need formatting. Please review the diff."
-                echo "Tip: install pre-commit:"
-                echo "cp pre-commit ./git/hooks"
+                echo "Tip: install pre-commit from repo root:"
+                echo "cp pre-commit .git/hooks/"
                 exit 1
             else
                 echo "All files are properly formatted."
