Printable fx in InstrumentView (#155)
* Printable fx in InstrumentView

    Uses ffmpeg to print reverb to currently selected sample and swap for sample with reverb
    
    Bump build tag
    Update check and build jobs to include IR-s
    
    On-screen notifications

--- a/projects/lgpt.vcproj
+++ b/projects/lgpt.vcproj
@@ -1074,6 +1074,18 @@
 					</File>
 				</Filter>
 				<Filter
+					Name="FX"
+					>
+					<File
+						RelativePath="..\sources\Application\FX\FxPrinter.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\sources\Application\FX\FxPrinter.h"
+						>
+					</File>
+				</Filter>
+				<Filter
 					Name="Player"
 					>
 					<File
