--- a/projects/Makefile
+++ b/projects/Makefile
@@ -38,6 +38,7 @@ COMMONDIRS := \
 	../sources/Application/Controllers \
 	../sources/Application/Commands \
 	../sources/Application/Audio \
+	../sources/Application/FX \
 	../sources/Application/Views \
 	../sources/Application/Views/ModalDialogs \
 	../sources/Application/Views/BaseClasses \
@@ -258,7 +259,7 @@ COMMONFILES := \
 	char.o n_assert.o fixed.o wildcard.o \
 	SyncMaster.o TablePlayback.o Player.o \
 	Table.o TableView.o\
-	InstrumentBank.o WavFileWriter.o WavFile.o MidiInstrument.o Filters.o SampleVariable.o SampleInstrument.o SamplePool.o CommandList.o \
+	InstrumentBank.o WavFileWriter.o WavFile.o MidiInstrument.o Filters.o SampleVariable.o SampleInstrument.o SamplePool.o CommandList.o FxPrinter.o\
 	PersistencyService.o Persistent.o \
 	Observable.o SingletonRegistry.o \
 	Audio.o AudioMixer.o AudioOutDriver.o AudioDriver.o \
