--- a/projects/lgpt.vcxproj
+++ b/projects/lgpt.vcxproj
@@ -333,6 +333,7 @@
     <ClCompile Include="..\sources\Application\Controllers\ControlRoom.cpp" />
     <ClCompile Include="..\sources\Application\Mixer\MixBus.cpp" />
     <ClCompile Include="..\sources\Application\Mixer\MixerService.cpp" />
+    <ClCompile Include="..\sources\Application\FX\FxPrinter.cpp" />
     <ClCompile Include="..\sources\UIFramework\BasicDatas\GUIEvent.cpp" />
     <ClCompile Include="..\sources\UIFramework\BasicDatas\GUIRect.cpp" />
     <ClCompile Include="..\sources\UIFramework\Interfaces\I_GUIWindowImp.cpp" />
@@ -469,6 +470,7 @@
     <ClInclude Include="..\sources\Application\Controllers\ControlRoom.h" />
     <ClInclude Include="..\sources\Application\Mixer\MixBus.h" />
     <ClInclude Include="..\sources\Application\Mixer\MixerService.h" />
+    <ClInclude Include="..\sources\Application\FX\FxPrinter.h" />
     <ClInclude Include="..\sources\UIFramework\Interfaces\I_GUIGraphics.h" />
     <ClInclude Include="..\sources\UIFramework\SimpleBaseClasses\GUIWindow.h" />
     <ClInclude Include="..\sources\Externals\RTAudio\RtAudio.h" />
