--- a/projects/Makefile
+++ b/projects/Makefile
@@ -255,7 +255,7 @@ COMMONFILES := \
 	MessageBox.o \
 	GrooveView.o UINoteVarField.o UIBigHexVarField.o \
 	SRPUpdaters.o UIStaticField.o \
-	Song.o Chain.o Phrase.o Project.o \
+	Song.o Chain.o Phrase.o Project.o Scale.o \
 	char.o n_assert.o fixed.o wildcard.o \
 	SyncMaster.o TablePlayback.o Player.o \
 	Table.o TableView.o\
