--- a/projects/Makefile.RASPI
+++ b/projects/Makefile.RASPI
@@ -6,7 +6,8 @@ DEFINES := \
 	-D_NDEBUG \
 	-D_NO_JACK_ \
 	-D__LINUX_ALSA__ \
-	-D__LINUX_ALSASEQ__
+	-D__LINUX_ALSASEQ__ \
+	-DFFMPEG_ENABLED
 
 CFLAGS := -O3  -Wall $(DEFINES) -I/usr/local/include -I$(PWD)/../sources
 CXXFLAGS:= $(CFLAGS)
